--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "twilio": "^5.4.3",
     "typed.js": "^2.0.16",
     "typescript": "^4.9.5",
